# portion

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  PERFORMANCE.md  README.md  benchmark.py  intervals.py  pyproject.toml  setup.cfg  setup.py  test_intervals.py
.github/: FUNDING.yml
.github/workflows/: deploy.yaml  deploy.yml  test.yaml  test.yml
intervals/: __init__.py  const.py  dict.py  func.py  interval.py  intervals.py  io.py
portion/: __init__.py  api.py  const.py  dict.py  func.py  interval.py  io.py
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: lib.rs
tests/: strategies.py  test_const.py  test_dict.py  test_discrete.py  test_doc.py  test_func.py  test_interval.py  test_io.py  test_performance.py
typings/portion/: __init__.pyi  api.pyi  const.pyi  dict.pyi  func.pyi  interval.pyi  io.pyi
