[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portion"
version = "2.6.2-pre1"
license = { text = "LGPLv3" }
authors = [{ name = "Alexandre Decan", email = "alexandre.decan@lexpage.net" }]
description = "Python data structure and operations for intervals"
readme = { file = "README.md", content-type = "text/markdown" }
urls = { Homepage = "https://github.com/AlexandreDecan/portion" }
keywords = ["interval", "range", "span"]
requires-python = ">= 3.9"
dependencies = ["sortedcontainers~=2.4"]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0", "ruff>=0.14.7"]


[tool.ruff]
extend-exclude = ["tests/"]

[tool.ruff.lint]
ignore = ["B028"] # warnings.warn without stacklevel=2
