[metadata]
name = portion
version = 2.2.0-dev
author = Alexandre Decan
author_email = alexandre.decan@lexpage.net
description = Python data structure and operations for intervals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlexandreDecan/portion
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = portion
install_requires =
    sortedcontainers >=2.2.0, <3.0.0
python_requires = >=3.6
zip_safe = True

[options.extras_require]
test =
    pytest >=5.0.1, <6.0.0
dev =
    black >=20.8.b1
    pre-commit >=2.12.1, <3.0.0
ci =
    coverage
    coveralls